--- a/style.css
+++ b/style.css
@@ -16,7 +16,8 @@ div > div{
     border: 2px solid blue;
     display: grid;
     place-content: center;
-    font-size: 3rem;
+    font-size: 3.5rem;
+    font-family: sans-serif;
     border-radius: 25px;
     transition: transform 0.3s ease-in-out;
 }
@@ -30,12 +31,9 @@ div > div{
     animation: slide 0.5s ease forwards;
 }
 
-@keyframes slide {
-    from{
-        transform: translateX(0px);
-    }
-    to{
-        transform: translateX(200px);
-    }
-    
+body > div:nth-last-of-type(1), body > div:nth-last-of-type(2){
+    font-size: 2em;
+    width: fit-content;
+    margin: auto;
+    margin-top: 1.5em;
 }
